Add fieldMap support for nested field references and add more thorough testing